--- a/additem.html
+++ b/additem.html
@@ -13,6 +13,8 @@ VFW Project: Chore List
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="user-scalable=no, width=device-width" /> 
     <title>Daily Chores</title>
+    <Link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script src="js/main.js" type="text/javascript"></script>
 </head>
 <body>
 <h1>Chore List </h1>
@@ -50,7 +52,7 @@ VFW Project: Chore List
         <ul>
             <li>Importance 
                 <ul>
-                    <li><input type="range" value="0 - 10" id="range" /></li>
+                    <li><input type="range" id="range" min="1" max="10" /></li>
                 </ul>
             </li>
         </ul>
@@ -66,9 +68,10 @@ VFW Project: Chore List
             </ul>    
         </ul>
     </fieldset>
-    <input type="submit" value="Save"
+    <input type="submit" id="button" value="Save" />
 </form>
 <br><a href="#" />clear storage data</a>
+    <a href="#" />show data</a>
 
 </body>
 </html>
