--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ VFW Project: Chore List
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="user-scalable=no, width=device-width" /> 
     <title>Daily Chores</title>
+    <Link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script src="js/main.js" type="text/javascript"></script>
 </head>
 <body>
   <h1>Daily Chores</h1>
