Just finished all the css I'm willing to try for the day.

--- a/additem.html
+++ b/additem.html
@@ -68,10 +68,10 @@ VFW Project: Chore List
             </ul>    
         </ul>
     </fieldset>
-    <input type="submit" id="button" value="Save" />
+    <input type="button" id="button" value="Save" />
 </form>
 <br><a href="#" />clear storage data</a>
-    <a href="#" />show data</a>
+    <a href="#" />display data</a>
 
 </body>
 </html>
