--- a/additem.html
+++ b/additem.html
@@ -14,7 +14,7 @@ VFW Project: Chore List
     <meta name="viewport" content="user-scalable=no, width=device-width" /> 
     <title>Daily Chores</title>
     <Link rel="stylesheet" type="text/css" href="css/style.css" />
-    <script src="js/main.js" type="text/javascript"></script>
+    
 </head>
 <body>
 <h1>Chore List </h1>
@@ -59,7 +59,7 @@ VFW Project: Chore List
         <ul>
         <li>Completion Date
             <ul>
-                <li><input type="date" id="cdate" /></li>
+                <li><input type="date" id="choreDate" /></li>
             </ul>
         </li>
             <ul>
@@ -68,10 +68,10 @@ VFW Project: Chore List
             </ul>    
         </ul>
     </fieldset>
-    <input type="button" id="button" value="Save" />
+    <input type="button" id="saveButton" value="Save" />
 </form>
-<br><a href="#" />clear storage data</a>
-    <a href="#" />display data</a>
-
+<a href="#" id="clearStorage" />clear stored data</a>
+    <a href="#" id="displayData" />display data</a>
+<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
