--- a/additem.html
+++ b/additem.html
@@ -18,7 +18,7 @@ VFW Project: Chore List
 </head>
 <body>
 <h1>Chore List </h1>
-<form action="#" method="post">
+<form action="#" method="post" id="choreForm">
     <fieldset>
         <legend>Chore Information</legend>
         <ul>
@@ -70,8 +70,9 @@ VFW Project: Chore List
     </fieldset>
     <input type="button" id="saveButton" value="Save" />
 </form>
-<a href="#" id="clearStorage" />clear stored data</a>
+    <a href="#" id="clearStorage" />clear stored data</a>
     <a href="#" id="displayData" />display data</a>
+    <a href="#" id="addNewChore" style="display: none;"/>Add New Chore</a>
 <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
