--- a/additem.html
+++ b/additem.html
@@ -25,17 +25,7 @@ VFW Project: Chore List
             <li><label for="chore">Description</label><input type="text" id="chore" /></li>
         </ul>
         <ul>
-            <li>
-               <label for="type">Type</label>
-               <select id="type">
-                <option value="laundry">laundry</option>
-                <option value="kitchen">kitchen</option>
-                <option value="bathroom">bathroom</option>
-                <option value="living room">living room</option>
-                <option value="beddroom">beddroom</option>
-                <option value="yard">yard</option>
-               </select>
-            </li>
+            <li id="select"><label for="group">*Add Chore Type:</label><br /></li>
         </ul>
     </fieldset>
     <fieldset>
@@ -72,7 +62,7 @@ VFW Project: Chore List
 </form>
     <a href="#" id="clearStorage" />clear stored data</a>
     <a href="#" id="displayData" />display data</a>
-    <a href="#" id="addNewChore" style="display: none;"/>Add New Chore</a>
+    <a href="addItem.html" id="addNewChore" style="display: none;"/>Add New Chore</a>
 <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
