--- a/additem.html
+++ b/additem.html
@@ -18,13 +18,15 @@ VFW Project: Chore List
 </head>
 <body>
 <h1>Chore List </h1>
+    <a href="#" id="clearStorage" />clear stored data</a>
+    <a href="#" id="displayData" />display data</a>
+    <a href="addItem.html" id="addNewChore" style="display: none;"/>Add New Chore</a>
 <form action="#" method="post" id="choreForm">
     <fieldset>
         <legend>Chore Information</legend>
-        <ul>
+        <ul id="errors"></ul>
+        <ul id="choreList">    
             <li><label for="chore">Description</label><input type="text" id="chore" /></li>
-        </ul>
-        <ul>
             <li id="select"><label for="group">*Add Chore Type:</label><br /></li>
         </ul>
     </fieldset>
@@ -60,9 +62,7 @@ VFW Project: Chore List
     </fieldset>
     <input type="button" id="saveButton" value="Save" />
 </form>
-    <a href="#" id="clearStorage" />clear stored data</a>
-    <a href="#" id="displayData" />display data</a>
-    <a href="addItem.html" id="addNewChore" style="display: none;"/>Add New Chore</a>
+    
 <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
