--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@ VFW Project: Chore List
 -->
 <html>
 <head>
+    <!-- character set meta -->
     <meta charset="utf-8" />
     <meta name="description" content="First to do app." />
     <meta name="keywords" content="to do, web app, mobile development" />
     <meta name="robots" content="index, follow" />
-    <meta name="viewport" content="user-scalable=no, width=device-width" /> 
+    <meta name="viewport" content="user-scalable=no, width=device-width" />
+    <!--Document Title --> 
     <title>Daily Chores</title>
+    <!-- Link CSS -->
     <Link rel="stylesheet" type="text/css" href="css/style.css" />
-    <script src="js/main.js" type="text/javascript"></script>
+    
 </head>
 <body>
   <h1>Daily Chores</h1>
-  <p>Keep up with what chores you have left in your day.</p>
-  <a href="additem.html" />Add Item</a>
-
+  <p>Keep up with the chores left in your day.</p>
+  
+  <input type="button" id="addItem" value="Add Item"  onClick="window.location.href='additem.html'"> 
 
 </body>
 </html>
